// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-text-break-resolver 1. adds attributes to simple Text: 1. adds attributes to simple Text 1`] = `

<Text>Hello</Text>;

      ↓ ↓ ↓ ↓ ↓ ↓

<Text
  textBreakStrategy={"simple"}
  numberOfLines={1}
  adjustsFontSizeToFit={true}
>
  Hello
</Text>;

`;

exports[`babel-plugin-text-break-resolver 2. does not override existing attributes: 2. does not override existing attributes 1`] = `

<Text textBreakStrategy="highQuality">Hello</Text>;

      ↓ ↓ ↓ ↓ ↓ ↓

<Text
  textBreakStrategy="highQuality"
  numberOfLines={1}
  adjustsFontSizeToFit={true}
>
  Hello
</Text>;

`;
